<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backC"
    android:gravity="center"
    tools:context=".login">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/gr"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textSize="37sp"
                android:textStyle="bold"
                />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textColor="@color/gr"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/etname"
                android:textColor="@color/white"
                android:padding="10dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textColor="@color/gr"
                android:textSize="18sp"
                android:gravity="center_vertical"/>


            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/etpass"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:padding="10dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingRight="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="logIN"
                android:textColor="@color/white"
                android:backgroundTint="@color/gr"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingRight="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegBtn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="regIN"
                android:textColor="@color/white"
                android:backgroundTint="@color/gr"/>
        </TableRow>

    </TableLayout>



